--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "aos": "^2.3.4",
     "jquery": "^3.5.1",
     "normalize.css": "^8.0.1",
+    "simple-slider": "^1.0.1",
     "swiper": "^8.1.0",
     "vanilla-lazyload": "^17.8.1"
   }
